Title Change and Sample Images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Retino Scanner</string>
+    <string name="app_name">RetnoScan</string>
     <string name="compose_email">Compose Email</string>
 </resources>
